--- a/css/main.css
+++ b/css/main.css
@@ -304,7 +304,7 @@ section {
 }
 
 .contact-btn {
-  padding: 10px 20px;
+  padding: 12px 24px;
   border: none;
   cursor: pointer;
   background-color: transparent;
@@ -321,6 +321,7 @@ section {
   -moz-border-radius: 8px;
   -ms-border-radius: 8px;
   -o-border-radius: 8px;
+  text-decoration: none;
 }
 .contact-btn:hover {
   border-color: white;
