--- a/css/main.css
+++ b/css/main.css
@@ -74,6 +74,157 @@ section {
 }
 
 /*end of general styles */
+
+/* navbar */
+
+/* Navbar Styles */
+
+.moving-div {
+  display: flex;
+  align-items: center;
+}
+.moving-div .container {
+  width: 100%;
+}
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row-reverse;
+  width: 100%;
+}
+
+.navbar nav {
+  display: flex;
+  align-items: center;
+}
+
+.navbar .nav-links {
+  display: flex;
+  gap: 20px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.navbar .nav-links li {
+  display: inline;
+}
+
+.navbar .nav-links a {
+  color: var(--primary-color);
+  text-decoration: none;
+  border-radius: 4px;
+  transition: color 0.3s, background-color 0.3s;
+  position: relative;
+  padding: 10px 15px;
+  border: 1px solid transparent;
+}
+
+.navbar .nav-links a:hover {
+  color: white;
+  background-color: var(--primary-color);
+}
+
+.menu-icon {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.menu-icon span {
+  background-color: var(--primary-color);
+  margin: 3px 0;
+  height: 3px;
+  width: 25px;
+  transition: 0.4s;
+}
+
+.drawer {
+  position: fixed;
+  top: 0;
+  right: -100%; /* Hide off-screen */
+  width: 80%; /* Adjust width as needed */
+  height: 100%;
+  max-width: 300px;
+  background-color: #fff; /* Background color */
+  display: flex;
+  flex-direction: column;
+  transition: right 0.3s ease-in-out;
+  z-index: 1000;
+  padding: 20px;
+}
+
+.drawer.open {
+  right: 0; /* Slide in when open */
+}
+.drawer .drawer-close {
+  align-self: flex-end;
+  border: none;
+  font-size: 2rem;
+  cursor: pointer;
+  color: white;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background-color: var(--primary-color);
+}
+
+.drawer ul {
+  list-style: none;
+  padding: 0;
+}
+
+.drawer ul li {
+  margin-bottom: 20px;
+}
+
+.drawer ul li a {
+  color: var(--primary-color);
+  text-decoration: none;
+  font-size: 1.2rem;
+}
+
+.drawer ul li a:hover {
+  color: var(--secondary-color);
+}
+@media (max-width: 1280px) {
+  .navbar .nav-links {
+    display: none;
+  }
+
+  .menu-icon {
+    display: flex;
+  }
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  right: 100%; /* Start off-screen */
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out, right 0s 0.3s;
+  z-index: 999;
+}
+
+.overlay.open {
+  right: 0;
+  opacity: 1;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.overlay.open {
+  right: 0;
+  transition: opacity 0.3s ease-in-out, right 0s;
+}
+
+/* hero */
 .hero-section {
   width: 100%;
   overflow: hidden;
@@ -107,7 +258,7 @@ section {
   }
 }
 
-.moving-div .logo {
+.logo {
   height: 80px;
   margin: 2px 10px;
   @media (min-width: 1440px) {
@@ -201,6 +352,70 @@ section {
   .swiper-pagination {
     justify-content: center; /* Center pagination on smaller screens */
     padding-right: 0;
+  }
+}
+
+/* about us */
+
+/* About Section */
+.about-section {
+  padding: 60px 0 100px;
+}
+
+.about-title {
+  font-size: 32px;
+  color: var(--primary-color);
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.about-content {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+}
+
+.about-text {
+  flex: 1;
+  min-width: 300px;
+  padding: 10px;
+  text-align: center;
+  max-width: 800px;
+  margin: auto;
+}
+
+.about-text p {
+  font-size: 18px;
+  color: #333;
+  line-height: 1.8;
+  margin-bottom: 20px;
+}
+
+.about-image {
+  flex: 1;
+  min-width: 300px;
+  padding: 10px;
+  text-align: center;
+}
+
+.about-image img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 8px;
+}
+
+/* Responsive Styles */
+@media (max-width: 768px) {
+  .about-content {
+    flex-direction: column-reverse; /* Show image after text on mobile */
+  }
+
+  .about-title {
+    font-size: 28px;
+  }
+
+  .about-text p {
+    font-size: 16px;
   }
 }
 
@@ -334,6 +549,7 @@ section {
 
 .service-section {
   display: flex;
+  padding: 60px 0;
   @media (max-width: 1024px) {
     flex-direction: column-reverse;
   }
@@ -554,9 +770,9 @@ section {
 /* Contact us */
 /* General Contact Section Styling */
 .contact-section {
-  padding: 40px 0;
+  padding: 60px 0;
   background-color: #f9f9f9;
-  margin-top: 60px;
+  margin-top: 100px;
 }
 .contact-text {
   display: flex;
