--- a/css/main.css
+++ b/css/main.css
@@ -663,6 +663,11 @@ section {
   width: 100%;
   inset: 0px;
   object-fit: contain;
+  border-radius: 12px;
+  -webkit-border-radius: 12px;
+  -moz-border-radius: 12px;
+  -ms-border-radius: 12px;
+  -o-border-radius: 12px;
 }
 
 .service-content {
