--- a/css/main.css
+++ b/css/main.css
@@ -809,13 +809,13 @@ section {
 .mobile-app-img {
   position: relative;
   width: 411px;
-  height: 628px;
+  height: 650px;
   align-self: flex-end;
   display: block;
   overflow: hidden;
   @media (max-width: 1024px) {
     width: 272px;
-    height: 416px;
+    height: 480px;
     align-self: center;
   }
   @media (min-width: 1600px) {
@@ -826,6 +826,7 @@ section {
   position: absolute;
   width: 100%;
   height: 100%;
+  padding-top: 16px;
 }
 
 .mobile-app-text {
